# source-intercom-telephone

intercomTelefoon/: .autotools  .cproject  .project  CMakeLists.txt  Makefile  Makefile.in  NEWS  README  config.status  configure  configure.ac  nanopi.cmake
intercomTelefoon/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
intercomTelefoon/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  audioReceiveThread.c  audioReceiveThread.cpp  audioReceiveThread.h  audioTransmit.h  audioTransmitThread.c  audioTransmitThread.cpp  connections.c  connections.cpp  connections.h  io.c  io.cpp  io.h  keys.c  keys.cpp  keys.h  main.c  main.cpp  ringThread.c  ringThread.h  telefoon.h  testThread.c  testThread.cpp  testThread.h  textThread.c  timerThread.c  timerThread.cpp  timerThread.h  updateThread.c  updateThread.cpp  updateThread.h  videoThread.c  videoThread.cpp  videoThread.h
